--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'reactleaftletsample'
+include ':react-native-fingerprint-scanner'
+project(':react-native-fingerprint-scanner').projectDir = new File(rootProject.projectDir, '..\\node_modules\\react-native-fingerprint-scanner\\android')
 include ':react-native-sensors'
 project(':react-native-sensors').projectDir = new File(rootProject.projectDir, '..\\node_modules\\react-native-sensors\\android')
 include ':react-native-vector-icons'
