--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-rallycoding": "^3.2.0",
     "react": "16.6.3",
     "react-native": "0.58.5",
+    "react-native-fingerprint-scanner": "^2.5.0",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-sensors": "^5.1.7",
     "react-native-vector-icons": "^6.3.0",
