--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-gesture-handler": "^1.0.16",
     "react-native-sensors": "^5.1.7",
     "react-native-vector-icons": "^6.3.0",
+    "react-native-webview": "^5.2.1",
     "react-native-webview-leaflet": "^4.1.22",
     "react-navigation": "^3.3.2",
     "react-redux": "^6.0.1",
