--- a/package.json
+++ b/package.json
@@ -15,12 +15,27 @@
     "react-native-webview": "^5.2.1",
     "react-navigation": "^3.3.2",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "@sentry/browser": "^4.0.4",
+    "geolib": "^2.0.24",
+    "is-valid-coordinates": "^1.0.0",
+    "leaflet": "^1.3.1",
+    "leaflet.markercluster": "^1.4.1",
+    "lodash.uniqby": "^4.7.0",
+    "prop-types": "^15.6.0",
+    "react-leaflet": "^2.1.1",
+    "react-leaflet-markercluster": "^2.0.0-rc3",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.1.0",
     "metro-react-native-babel-preset": "0.52.0",
     "react-test-renderer": "16.6.3"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/assets/leaflet/"
+    ]
   }
 }
